--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
+  "name": "Laravel-Elixir-Angular-Jade",
+  "version": "0.0.1",
   "devDependencies": {
-    "coffee-script": "^1.9.1",
     "gulp-angular-templatecache": "^1.3.0",
     "gulp-concat": "^2.3.3",
     "gulp-if": "^1.2.5",
