--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "name": "laravel-elixir-angular-jade",
   "version": "0.0.1",
-  "devDependencies": {
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/uDefine/laravel-elixir-angular-jade"
+  },
+  "author": {
+    "name": "Martijn Wagena"
+  },
+  "dependencies": {
     "gulp-angular-templatecache": "^1.3.0",
     "gulp-concat": "^2.3.3",
     "gulp-if": "^1.2.5",
@@ -14,5 +22,7 @@
     "gulp-util": "^3.0.4",
     "jade": "^1.9.2"
   },
-  "dependencies": {}
+  "devDependencies": {
+    "gulp": "^3.8.8"
+  }
 }
